[package]
name = "meh_http_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6.2", default-features = false, features = ["alloc"] }
slog = { version = "2.7.0", default-features = false }
futures = { version = "0.3.15", default-features = false }
async-trait = "0.1.51"
async-std = { version = "1.10", default-features = false }
#async-std = { version = "1.10" }

[features]
default = ["std", "async-std/default"]
std = ["slog/std", "nom/std", "async-std/std"]
