[package]
name = "meh_http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meh_http_common = { path = "../meh_http_common/", default-features = false }
slog = {version = "2.7.0", default-features = false }
futures = { version = "0.3.15", default-features = false }
httparse = { version = "1.5.1", default-features = false }
serde = { version = "1.0.130", default-features = false }
serde_json = { version = "1.0.67", default-features = false, features = ["alloc"] }
async-trait = "0.1.51"

[features]
default = ["std"]
std = ["meh_http_common/std", "slog/std", "httparse/std", "serde/std", "serde_json/std"]