[package]
name = "meh_std_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meh_http_common = { path = "../meh_http_common/" }
meh_http_client = { path = "../meh_http_client/" }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }