[package]
name = "mininet_http_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mininet_base = { path = "../mininet_base/", default-features = false }
slog = { version = "2.7.0", default-features = false }
futures = { version = "0.3.15", default-features = false }
httparse = { version = "1.5.1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_json = { verison = "1", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["mininet_base/std"]