[package]
name = "mininet_http_server_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mininet_base = { path = "../mininet_base/", default-features = false }
mininet_http_server = { path = "../mininet_http_server/", default-features = false }
async-trait = "0.1.51"
futures = { version = "0.3", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { verison = "1", default-features = false, features = ["alloc"] }
slog = { version = "2.6.0", default-features = false }

[features]
default = ["std"]
std = ["mininet_base/std", "mininet_http_server/std", "slog/std", "serde/std", "serde_json/std"]