[package]
name = "mininet_std_tests"
version = "0.1.0"
edition = "2021"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mininet_base = { path = "../mininet_base/" }
mininet_http_client = { path = "../mininet_http_client/" }
mininet_http_server = { path = "../mininet_http_server/" }
mininet_http_server_rest = { path = "../mininet_http_server_rest/" }
async-std = { version = "1.10" }
async-io = "1.4.1"
futures = { version = "0.3.15", features = ["thread-pool"] }
frunk = "0.4"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
slog = "2.6.0"
slog-term = "2.6.0"
slog-async = "2.6.0"